# ChangeLog for dev-util/callgrind
# Copyright 1999-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/callgrind/ChangeLog,v 1.2 2004/09/24 01:46:45 caleb Exp $

  23 Sep 2004; Caleb Tennis <caleb@gentoo.org> callgrind-0.9.9.ebuild:
  x86 stable

  16 Sep 2004; Caleb Tennis <caleb@gentoo.org> :
  Initial import - replaces dev-util/calltree - bug #62863
