@@ -1,6 +1,11 @@
 # ChangeLog for dev-util/callgrind
 # Copyright 1999-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/callgrind/ChangeLog,v 1.2 2004/09/24 01:46:45 caleb Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/callgrind/ChangeLog,v 1.3 2004/11/22 13:07:18 caleb Exp $
+
+*callgrind-0.9.10 (22 Nov 2004)
+
+  22 Nov 2004; Caleb Tennis <caleb@gentoo.org> +callgrind-0.9.10.ebuild:
+  Version bump
 
   23 Sep 2004; Caleb Tennis <caleb@gentoo.org> callgrind-0.9.9.ebuild:
   x86 stable
